# RidgeDash

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  art.fig  fetch_repos.py  repos.json
.github/workflows/: release.yml  web.yml
assets/audio/sfx/: cactus_pickup.bfxr  car_flip.bfxr  car_hit_1.bfxr  car_hit_2.bfxr  car_hit_3.bfxr  car_landing_1.bfxr  car_landing_2.bfxr  car_landing_3.bfxr  coin_pickup_1.bfxr  coin_pickup_2.bfxr  flea_jump.bfxr  fuel_can_pickup.bfxr  reset.bfxr  rocket_finish.bfxr  rocket_pick.bfxr  shutdown.bfxr  snowman_pickup.bfxr  ui_select.bfxr
assets/shaders/: brightpass.fs  crt.fs  crt_es.fs  exit_transition.fs  reset_dissolve.fs
cmake/: RidgeDash3DS.cmake  RidgeDashDist.cmake  strip_dist_assets.cmake  x86_64-w64-mingw32.cmake
packaging/: package_helpers.sh
packaging/3ds/: font.t3s.in  generate_default_font.py  package_3ds.sh  package_3ds_container.sh  run_3ds_container.sh  sprites.t3s
packaging/cardputer/: package_cardputer.sh  ridgedash.desktop.in
packaging/deb/: package_deb.sh
packaging/linux/: install_desktop.sh  package_linux.sh
packaging/macos/: package_macos.sh
packaging/windows/: package_windows.sh
src/: main.cpp  main_3ds.cpp  main_web.cpp
src/game/: game_config.hpp  render.cpp  render_helpers.cpp  render_helpers.hpp  ridge_dash_game.cpp  ridge_dash_game.hpp
src/game/audio/: audio_system.cpp  audio_system.hpp  audio_system_3ds.cpp
src/game/pickups/: cactus_pickups.cpp  coin_pickups.cpp  flea_pickups.cpp  fuel_pickups.cpp  giant_flea_pickups.cpp  helmet_pickups.cpp  magnet_pickups.cpp  pickup_base.hpp  pickup_base_impl.hpp  pickup_effects.cpp  pickup_system.cpp  pickups.hpp  rocket_pickups.cpp  snowman_pickups.cpp  squid_pickups.cpp
src/game/run/: run_controller.cpp  run_controller.hpp  run_records.hpp  run_stats.hpp  save_data.cpp  save_data.hpp  trick_tracker.cpp  trick_tracker.hpp
src/game/ui/: display_scale.cpp  display_scale.hpp  game_input.cpp  game_input.hpp  game_ui.cpp  game_ui.hpp  pause_menu_controller.cpp  pause_menu_controller.hpp
src/game/vehicle/: vehicle.cpp  vehicle.hpp
src/game/world/: environment.cpp  environment.hpp  terrain.cpp  terrain.hpp  terrain_profiles.hpp
src/game/world/biome/: biome.cpp  biome.hpp  desert_biome.cpp  mountain_biome.cpp  snow_biome.cpp  stone_biome.cpp
src/platform/: 3ds_raylib_compat.cpp  evdev_input_compat.cpp  fbdev_raylib_compat.cpp  native_window.hpp  native_window_mac.mm  native_window_stub.cpp  raylib_compat.hpp  raylib_compat_types.hpp
src/web/: shell.html
