cmake_minimum_required(VERSION 3.16)

project(RidgeDash VERSION 1.0.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)

set(RIDGEDASH_BIN_NAME "RidgeDash" CACHE STRING "Output executable name")
if(RIDGEDASH_BIN_NAME STREQUAL "M5CardputerZero-RidgeDash")
    set(RIDGEDASH_BIN_NAME "RidgeDash" CACHE STRING "Output executable name" FORCE)
endif()
set(RIDGEDASH_RAYLIB_PLATFORM "Desktop" CACHE STRING "Render platform: Desktop, Web, DRM, or FBDEV")
set_property(CACHE RIDGEDASH_RAYLIB_PLATFORM PROPERTY STRINGS Desktop Web DRM FBDEV)
option(RIDGEDASH_COPY_TO_DIST "Copy build outputs into the repository dist directory" ON)

set(RIDGEDASH_ROOT "${CMAKE_CURRENT_LIST_DIR}")
set(RIDGEDASH_SRC_DIR "${RIDGEDASH_ROOT}/src")
set(RIDGEDASH_DEPS_DIR "${RIDGEDASH_ROOT}/dependencies")
set(RIDGEDASH_RAYLIB_DIR "${RIDGEDASH_DEPS_DIR}/raylib")
set(RIDGEDASH_BOX2D_DIR "${RIDGEDASH_DEPS_DIR}/box2d")
set(RIDGEDASH_SMOOTH_UITK_DIR "${RIDGEDASH_DEPS_DIR}/smooth_ui_toolkit")
set(RIDGEDASH_SYSTEM_LIBS ${CMAKE_DL_LIBS})

set(RIDGEDASH_PLATFORM_FILE "${RIDGEDASH_ROOT}/cmake/platforms/${RIDGEDASH_RAYLIB_PLATFORM}.cmake")
if(NOT EXISTS "${RIDGEDASH_PLATFORM_FILE}")
    message(FATAL_ERROR
        "Unsupported RIDGEDASH_RAYLIB_PLATFORM='${RIDGEDASH_RAYLIB_PLATFORM}'. "
        "Expected Desktop, Web, DRM, or FBDEV."
    )
endif()
include("${RIDGEDASH_PLATFORM_FILE}")

if(UNIX AND NOT APPLE)
    list(APPEND RIDGEDASH_SYSTEM_LIBS m)
endif()

foreach(required_dir IN LISTS RIDGEDASH_RAYLIB_DIR RIDGEDASH_BOX2D_DIR RIDGEDASH_SMOOTH_UITK_DIR)
    if(NOT EXISTS "${required_dir}/CMakeLists.txt")
        message(FATAL_ERROR "Missing dependency: ${required_dir}. Run 'python3 fetch_repos.py' first.")
    endif()
endforeach()

set(BOX2D_SAMPLES OFF CACHE BOOL "" FORCE)
set(BOX2D_BENCHMARKS OFF CACHE BOOL "" FORCE)
set(BOX2D_UNIT_TESTS OFF CACHE BOOL "" FORCE)
set(BOX2D_VALIDATE OFF CACHE BOOL "" FORCE)
set(SMOOTH_UI_TOOLKIT_BUILD_EXAMPLE OFF CACHE BOOL "" FORCE)
set(SMOOTH_UI_TOOLKIT_BUILD_TEST OFF CACHE BOOL "" FORCE)

if(RIDGEDASH_PLATFORM_USES_RAYLIB)
    set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
    set(BUILD_GAMES OFF CACHE BOOL "" FORCE)
    if(RIDGEDASH_PLATFORM_ENABLE_AUDIO)
        set(SUPPORT_MODULE_RAUDIO ON CACHE BOOL "" FORCE)
    else()
        set(SUPPORT_MODULE_RAUDIO OFF CACHE BOOL "" FORCE)
    endif()
    set(CUSTOMIZE_BUILD ON CACHE BOOL "" FORCE)
    set(PLATFORM "${RIDGEDASH_PLATFORM_RAYLIB_NAME}" CACHE STRING "" FORCE)
    if(RIDGEDASH_PLATFORM_RAYLIB_GRAPHICS)
        set(GRAPHICS "${RIDGEDASH_PLATFORM_RAYLIB_GRAPHICS}" CACHE STRING "" FORCE)
    endif()
    add_subdirectory("${RIDGEDASH_RAYLIB_DIR}" EXCLUDE_FROM_ALL)
endif()

add_subdirectory("${RIDGEDASH_BOX2D_DIR}" EXCLUDE_FROM_ALL)
add_subdirectory("${RIDGEDASH_SMOOTH_UITK_DIR}" EXCLUDE_FROM_ALL)

file(GLOB_RECURSE RIDGEDASH_CPP CONFIGURE_DEPENDS
    "${RIDGEDASH_SRC_DIR}/*.cpp"
)
# main_web.cpp is the Emscripten entry point; always remove it from the glob so
# it is never accidentally compiled into non-Web targets.
list(REMOVE_ITEM RIDGEDASH_CPP "${RIDGEDASH_SRC_DIR}/main_web.cpp")
if(RIDGEDASH_PLATFORM_IS_WEB)
    # Swap the standard blocking main for the emscripten_set_main_loop variant.
    list(REMOVE_ITEM RIDGEDASH_CPP "${RIDGEDASH_SRC_DIR}/main.cpp")
    list(APPEND RIDGEDASH_CPP "${RIDGEDASH_SRC_DIR}/main_web.cpp")
endif()

add_executable(${RIDGEDASH_BIN_NAME}
    ${RIDGEDASH_CPP}
    ${RIDGEDASH_PLATFORM_SOURCES}
)

target_include_directories(${RIDGEDASH_BIN_NAME} PRIVATE
    "${RIDGEDASH_SRC_DIR}"
    ${RIDGEDASH_PLATFORM_INCLUDE_DIRECTORIES}
)

target_compile_definitions(${RIDGEDASH_BIN_NAME} PRIVATE
    ${RIDGEDASH_PLATFORM_COMPILE_DEFINITIONS}
    RIDGEDASH_SCREEN_WIDTH=320
    RIDGEDASH_SCREEN_HEIGHT=170
)

target_link_libraries(${RIDGEDASH_BIN_NAME} PRIVATE
    box2d
    smooth_ui_toolkit
    ${RIDGEDASH_SYSTEM_LIBS}
    ${RIDGEDASH_PLATFORM_LINK_LIBRARIES}
)

set_target_properties(${RIDGEDASH_BIN_NAME} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/runtime"
)

if(RIDGEDASH_PLATFORM_WIN32_EXECUTABLE)
    set_target_properties(${RIDGEDASH_BIN_NAME} PROPERTIES WIN32_EXECUTABLE TRUE)
endif()
if(RIDGEDASH_PLATFORM_TARGET_SUFFIX)
    set_target_properties(${RIDGEDASH_BIN_NAME} PROPERTIES SUFFIX "${RIDGEDASH_PLATFORM_TARGET_SUFFIX}")
endif()
if(RIDGEDASH_PLATFORM_LINK_OPTIONS)
    target_link_options(${RIDGEDASH_BIN_NAME} PRIVATE
        ${RIDGEDASH_PLATFORM_LINK_OPTIONS}
    )
endif()

if(RIDGEDASH_COPY_TO_DIST)
    include("${RIDGEDASH_ROOT}/cmake/RidgeDashDist.cmake")
    ridgedash_add_dist_target(${RIDGEDASH_BIN_NAME})
endif()
